# deepresearch-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_DESIGN.md  README.md  compose.redis.yml  compose.yml  pyproject.toml
configs/: default.toml  live_web.toml
docs/: BUILD_LOG.md  DEEPRESEARCH_INTERVIEW_DEEP_DIVE.md  DURABLE_WORKER_OPERATIONS.md  EMBEDDING_INTEGRATION.md  EXPERIMENTS.md  FINAL_COMPLETION_CHECKLIST.md  FINAL_PROJECT_REPORT.md  GITHUB_PORTFOLIO.md  GOLDEN_DEMO.md  INTERVIEW_QA.md  LEARNING_INDEX.md  OPEN_SOURCE_COMPARISON.md  POST_EXAM_STUDY_PLAN.md  PROJECT_COMPLETION_LOG.md  REAL_DATA_ARCHITECTURE.md  RESUME_NOTES.md  RESUME_SECOND_PROJECT_FINAL.md  RETRIEVAL_EVALUATION.md  SERVICE_OPERATIONS.md  SHENZHEN_AGENT_INTERNSHIP_JD_2026.md  TRACEABILITY_MATRIX.md  UPLOAD_INGESTION.md  blog_01_from_demo_to_engineering.md  blog_02_asyncio_dag.md  blog_03_memory_vector.md  blog_04_textrank_citation.md  blog_05_verifier_redblue.md  blog_06_researchbench_eval.md  blog_from_rag_demo_to_deepresearch_agent.md  learning_adaptive_planner.md  learning_claim_preflight.md  learning_config_backend.md  learning_core_schemas.md  learning_evaluation_metrics.md  learning_orchestration_fallback.md  learning_orchestration_trace.md  learning_redblue_convergence.md  learning_redblue_fixtures.md  learning_searcher_grounding.md  learning_sqlite_migration.md  (+10 more)
experiments/: baseline.yaml
scripts/: annotate_junit_failures.py  build_corpus_profiles.py  build_llm_verifier_extended_cases.py  build_pre_resume_evidence_pack.py  check_project_completion.py  clean_artifacts.py  (+32 more)
(+269 files in other folders)
